--- a/jp/musicagalega.html
+++ b/jp/musicagalega.html
@@ -21,7 +21,7 @@
                         <div class="cardtitle">
                             <small><h1>ガリシアとガリシアの音楽について</h1></small>
                         </div>
-                        <h2>2025.7.28 更新</h2>
+                        <h2>2025.8.6 更新</h2>
                         <p>
                             音楽や文化に関する用語をアルファベット順に並べています。
                             複数の意味を多く持つ場合は、主題と関係あるものに絞っています。
@@ -53,8 +53,7 @@
                             刃物の研ぎ師。
                             近現代のガリシアにおいては、オウレンセ周辺からイベリア半島の都市部へ出稼ぎ労働をする研ぎ師が多くいた。
                             車輪のついた作業台を引きながら街を練り歩き、チフレと呼ばれる笛を吹いて来訪を知らせる。
-                            差別的な扱いを受けることも多かったが、現代ではガリシア文化の一つとして再認識されている。
-                        </p>
+                            差別的な扱いを受けることも多かったが、現代ではガリシア文化の一つとして再認識されている。                        </p>
                         <a class="link01" target="_blank" href="https://academia.gal/dicionario/-/termo/afiador">
                             Persoa que ten como profesión ou oficio o de afiar.
                             (Diccionario | Real Academia Galega)    
@@ -117,20 +116,29 @@
                     <div class="box">
                         <div class="cardtitle">Bb</div>
                         <h2 id="baileagarrado">baile agarrado</h2>
-                        <p class="ipa">[ˈbajle aɣaˈraðo̝]バイレ・アガラード</p>
+                        <p class="ipa">[ˈbajle̝aɣaˈraðo̝]バイレ・アガラード</p>
                         <p class=acp>
                             ペア同士が身体を密着させるダンス。
-                            ポルカ、パソドブレ、ワルツなど、外来のものである場合が多い。
+                            ポルカ、パソドブレ、バルセ（=ワルツ）など、外来のものである場合が多い。
                         </p>
-                        <a class="link01" href="">
+                        <a class="link01" href="https://www.xunta.gal/dog/Publicados/2018/20180426/AnuncioG0164-160418-0002_gl.html">
+                            A súa nomenclatura e as súas particularidades caracterizan cada un destes bailes agarrados dependendo da zona, e a súa característica principal é que na maioría dos casos non hai movemento de conxunto e que cada parella baila independente das outras.
+                            A maior parte destes bailes chegaron de fóra de Galicia, ou ben polo camiño de Santiago ou ben por moda das clases acomodadas e urbanas. 
+                            (DOG Núm. 81. Xunta de Galicia)
                         </a>
+                        <div class="ref">
+                            <a class="link02" href="#pasodobre">pasodobre</a>
+                        </div>
                         <h2 id="bailesolto">baile solto</h2>
-                        <p class="ipa">[ˈbajle ˈsɔlto̝]バイレ・ソルト</p>
+                        <p class="ipa">[ˈbajleˈsɔlto̝]バイレ・ソルト</p>
                         <p class=acp>
                             ペア同士が身体を密着させないダンス。
                             ムイニェイラ、ショタなど。
                         </p>
-                        <a class="link01" href="">
+                        <a class="link01" href="https://www.xunta.gal/dog/Publicados/2018/20180426/AnuncioG0164-160418-0002_gl.html">
+                            A primeira é máis antiga que a segunda, e ambas teñen en común que se bailan por un número indeterminado de parellas con coreografía de puntos e de desprazamento de conxunto. 
+                            Ademais, tanto na muiñeira como na xota non hai contacto físico entre as parellas que as executan. 
+                            (DOG Núm. 81. Xunta de Galicia)
                         </a>
                         <div class="ref">
                             <a class="link02" href="#muiñeira">muiñeira</a>
@@ -191,6 +199,21 @@
                         <div class="ref">
                             <a class="link02" href="#afiador">afiador</a> 
                         </div>
+                        <h2 id="costa da morte">Costa da Morte</h2>
+                        <p class="ipa">[ˈkɔsta̝ðaˈmɔɾte̝]コスタ・ダ・モルテ</p>
+                        <p class="acp">
+                            ア・コルーニャより西の大西洋沿岸部のうち北側一帯を指す通称。
+                            「死の海岸」という意味。
+                            厳しい海洋条件のため難破船が多発し、19世紀ごろからこの呼称が広まり定着した。
+                        </p>
+                        <a class="link01" target="_blank" href="https://turismo.dacoruna.gal/gl/a-provincia/costa-da-morte">
+                            A Costa da Morte atópase ao noroeste da provincia da Coruña, e caracterízase por mostrar de modo patente a forza do Océano Atlántico ao longo do seu litoral.
+                            (Costa da Morte. Deputación da Coruña)
+                        </a>
+                        <div class="ref">
+                            <a class="link02" href="#maneo">maneo</a>
+                            <a class="link02" href="#ribeirana">ribeirana</a> 
+                        </div>
                     </div>
                 </section>
                 <section id="e">
@@ -206,7 +229,7 @@
                             (Diccionario | Real Academia Galega)
                         </a>
                         <div class="ind1">
-                            <h2>『A esmorga』</h2>
+                            <h2>『<i>A esmorga</i>』</h2>
                             <p class="acp">
                                 オウレンセ出身の作家 Eduardo Blanco Amor が、1959年にブエノスアイレスで発表した小説。
                                 ガリシア語文学を代表する作品のひとつである。
@@ -246,6 +269,7 @@
                         <p class="ipa">[foliˈaða̝]フォリアーダ</p>
                         <p class="acp">
                             歌や踊りに興じる夜の宴。集まりに参加し、騒がしく楽しむこと。
+                            音楽としては４分の３拍子と定義されることもあるが、口語では、賑やかなものであればどんな曲でも指す。
                         </p>
                         <a class="link01" target="_blank" href="https://academia.gal/dicionario/-/termo/foliada">
                             Reunión nocturna de xente para divertirse, cantar e bailar. Diversión buliciosa en que participa un grupo de persoas.
@@ -309,15 +333,17 @@
                         <h2 id="maneo">maneo</h2>
                         <p class="ipa">[maˈneo̝]マネオ</p>
                         <p class="acp">
-                            ア・コルーニャ北西で見られるダンス。それに合わせる音楽のこと。
+                            北西部の海岸沿いエリアで見られるダンス。それに合わせる音楽のこと。
                             ショタと共通する点が多いが、部分的にリズムが異なる。
                         </p>
-                        <a class="link01" target="_blank" href="">
+                        <a class="link01" target="_blank" href="https://digalego.xunta.gal/es/termo/41110/maneo">
                             Baile popular típico dalgunhas comarcas galegas. 
                             Música e canto que acompañan este baile.
+                            (Digalego. Xunta de Galicia)
                         </a>
                         <div class="ref">
-                            <a class="link02" href="#xota">xota</a> 
+                            <a class="link02" href="#xota">xota</a>
+                            <a class="link02" href="#costadamorte">Costa da Morte</a>   
                         </div>
                         <h2 class="muiñada">muiñada</h2>
                         <p class="ipa">[muiˈɲaða̝]ムイニャーダ</p>
@@ -331,10 +357,11 @@
                         <h2 id="muiñeira">muiñeira</h2>
                         <p class="ipa">[muiˈɲejɾa̝]ムイニェイラ</p>
                         <p class="acp">
-                            ガリシア全域で見られるダンス。そのダンスに合わせる音楽。
-                            基本的には6/8拍子で、明るく活発なものが多い。
+                            ガリシア全域で見られる８分の６拍子のダンスを指す総称。
+                            そのダンスに合わせる音楽。
+                            明るく活発なものが多い。
                             １組かそれ以上の男女ペアで踊り、体は密着させない。
-                            地域や時代によって、様々な特徴や名称がある。
+                            地域や時代によって様々な特徴や名称がある。
                         </p>
                         <p class="acp">
                             もともとは、少数のペアや人数で踊り、歌唱とパンデイレータなどの打楽器のみを併せる。
@@ -444,8 +471,8 @@
                         <h2 id="pasacorredoira">pasacorredoira</h2>
                         <p class="ipa">[pasakoreˈðojɾa̝]パサコレドイラ</p>
                         <p class="acp">
-                        歩きながら演奏される行進曲。４分の２拍子。
-                        「pasa」（進む）+「corredoira」（車が通るような大きな通り）。
+                        歩きながら演奏するための行進曲。４分の２拍子。
+                        「pasa」（進む）+「corredoira」（車が通るような幅広い道のこと。大通り）。
                         </p>
                         <h2 id="pasodobre">pasodobre</h2>
                         <p class="ipa">[pasoˈðoβɾe̝]パソドブレ</p>
@@ -502,12 +529,16 @@
                         <p class="ipa">[riβejˈɾana̝]リベイラーナ</p>
                         <p class=acp>
                             ムイニェイラと類似のダンス。そのダンスに併せる音楽。
-                            ポンテベドラやオウレンセの周辺など、この名称を使う特定の地域が点在する。
+                            この名称を使う特定の地域がいくつか点在するが、ア・コルーニャ県北西部の地域のものが有名である。
+                            ムイニェイラ系のダンスとしては、かなり古い部類に入る。
                         </p>
-                        <a class="link01" href="">
+                        <a class="link01" href="https://www.xunta.gal/dog/Publicados/2018/20180426/AnuncioG0164-160418-0002_gl.html">
+                            Muiñeira vella ou ribeirana: considerado o baile de divertimento máis antigo de Galicia, a muiñeira vella localízase xeográficamente na Costa da Morte e na súa área de influencia (Mariñas, Bergantiños e Terras de Soneira). 
+                            (DOG Núm. 81. Xunta de Galicia)
                         </a>
                         <div class="ref">
-                            <a class="link02" href="#muiñeira">muiñeira</a> 
+                            <a class="link02" href="#muiñeira">muiñeira</a>
+                            <a class="link02" href="#costadamorte">Costa da Morte</a>  
                         </div>
                     </div>
                 </section>
