--- a/jp/musicagalega.html
+++ b/jp/musicagalega.html
@@ -21,7 +21,7 @@
                         <div class="cardtitle">
                             <small><h1>ガリシアとガリシアの音楽について</h1></small>
                         </div>
-                        <h2>2025.8.6 更新</h2>
+                        <h2>2025.11.18 更新</h2>
                         <p>
                             音楽や文化に関する用語をアルファベット順に並べています。
                             複数の意味を多く持つ場合は、主題と関係あるものに絞っています。
@@ -41,6 +41,48 @@
                         <p>
                             このページの内容と構成は、このURLからブラウザ上での閲覧だけを想定したものです。
                             その他の目的や用途で使用したり、他の場所にアップロードしたりしないでください。
+                        </p>
+                    </div>
+                </section>
+                <section id="">
+                    <div class="box">
+                        <div class="cardtitle">
+                            概観
+                        </div>
+                        <h2>ショセ・ロイス・フォショ『ガイタの秘密』より</h2>
+                        <p>
+                            ガリシア音楽にはリズムの違いによる様々なバリエーションがあり、ジャンル化している。
+                            ガリシア民族は自身の音楽に独自形式の表現を見出し、一年の様々な季節や農耕行事を祝うために音楽を奏でた。
+                            日々の労働の中で人々が生み出した歌や旋律が、ガリシアには多種多様に数多くあり、それらは農地で、道端で、集まりの場所で生まれた。
+                            一般的に流布している用語は必ずしも旋律やリズムの種別に全て対応できているわけではなく、
+                            例えば、マネオは具体的な音楽の様式というより、あらゆるリズムが当てはまる名称のひとつである。
+                        </p>
+                        <a class="link01" target="_blank" href="https://catalogo.bne.es/permalink/34BNE_INST/bf82cg/alma991018353049708606">
+                            Entendemos por xéneros ou denominativos as distintas variedades que a musica galega amosa en ritmos diferenciados entre si.
+                            O pobo galego atopa na súa música unha forma única de expresion;
+                            asi creou música para celebrar e festexar as distintas épocas e labores do ano.
+                            Son, polo tanto, moitos e moi dispares os cantos e melodías populares de Galicia, xurdidos xustamente na labor cotiá: 
+                            no agro, no camiño, no fiadeiro...
+                            Na terminoloxía coloquial-popular non sempre unha denominación corresponde a un tipo de melodía ou ritmo diferenciado; 
+                            así, por exemplo, o Maneo non é un xénero musical concreto, senón unha denominación que se pode aplicar a calquera ritmo.
+                            (Foxo, Xosé Lois.: <i>Os segredos da gaita</i>, 6ª ed., 
+                            Ourense: Escola Provincial de Gaitas da Deputación de Ourense, 2004)   
+                        </a>
+                        <h2>パブロ・カルピンテーロ『ガリシアの伝統楽器』より</h2>
+                        <p>
+                            独特の物悲しい景色によるものか、私たちの文化を苦しめる世俗からの強い迫害によるものか、
+                            歩んできた道によるものか、ガリシア人は確かな悲しみと受容に支配された性格を持つようになった。
+                            このような民族は、その性質を補う仕組みなくして生きていけず、それは私たちにとって、祝祭、音楽、歌、踊りだった。
+                        </p>
+                        <a class="link01" target="_blank" href="https://catalogo.bne.es/permalink/34BNE_INST/f0qo1i/alma991019659249708606">
+                            Quen sabe se pola propia paisaxe morriñenta, 
+                            se pola forte opresión secular sufrida pola nosa cultura ou se polos propios camiños que esta seguiu, 
+                            o caso é que os galegos desenvolvemos un carácter dominado por unha certa tristura e aceptación. 
+                            Un pobo así non pode vivir se non xera algunha clase de mecanismo compensatorio e este é, 
+                            para nós, a festa, a música, o canto e o baile. 
+                            (Carpintero, Pablo.: <i>Instrumentos tradicionais galegos: unha selección natural</i>, Ourense: Difusora de Letras, Artes e Ideas, 2009.)    
+                        </a>
+                        <p>
                         </p>
                     </div>
                 </section>
@@ -119,7 +161,7 @@
                         <p class="ipa">[ˈbajle̝aɣaˈraðo̝]バイレ・アガラード</p>
                         <p class=acp>
                             ペア同士が身体を密着させるダンス。
-                            ポルカ、パソドブレ、バルセ（=ワルツ）など、外来のものである場合が多い。
+                            ポルカ、パソドブレ、ワルツなど外来のものである場合が多い。
                         </p>
                         <a class="link01" href="https://www.xunta.gal/dog/Publicados/2018/20180426/AnuncioG0164-160418-0002_gl.html">
                             A súa nomenclatura e as súas particularidades caracterizan cada un destes bailes agarrados dependendo da zona, e a súa característica principal é que na maioría dos casos non hai movemento de conxunto e que cada parella baila independente das outras.
@@ -199,7 +241,7 @@
                         <div class="ref">
                             <a class="link02" href="#afiador">afiador</a> 
                         </div>
-                        <h2 id="costa da morte">Costa da Morte</h2>
+                        <h2 id="costadamorte">costa da morte</h2>
                         <p class="ipa">[ˈkɔsta̝ðaˈmɔɾte̝]コスタ・ダ・モルテ</p>
                         <p class="acp">
                             ア・コルーニャより西の大西洋沿岸部のうち北側一帯を指す通称。
@@ -298,7 +340,7 @@
                         <a class="link01" href="https://seivane.es/es/documentacion/historia-y-literatura/">
                             Historia y Literatura | Gaitas Seivane
                         </a>
-                        <h2>gaiteiro / gaiteira</h2>
+                        <h2>gaiteiro, gaiteira</h2>
                         <p class="ipa">[ɡajˈtejɾo̝, ɡajˈtejɾa̝]ガイテイロ, ガイテイラ</p>
                         <p class="acp">
                             ガイタ（gaita）を演奏する人。
